--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,30 @@
 #root {
   display: flex;
-  flex:1;
-  flex-direction: column;
+    flex: 1;
+      flex-direction: column;
   max-width: 1280px;
   align-content: center;
+  justify-content: center;
+    background-color: white;
+    /* background-color: white; */
+    /* border: solid red; */
+    margin: 3em;
 }
 
+.chart-container {
+  position: relative;
+  aspect-ratio: 1;
+  width: 50vw;
+}
 
+.test-border {
+  /* padding: 10px;
+  background-color: transparent; */
+  border: solid rgba(255, 0, 0, 0.2);
+}
+
+.coffee-name {
+  font-size: 50;
+  font-weight: 900;
+  text-align: center;
+}
