--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,8 @@
 #root {
-  display: flex;
-    flex: 1;
-      flex-direction: column;
   max-width: 1280px;
-  align-content: center;
-  justify-content: center;
+  width: 100%;
+    /* align-content: center; */
+    /* justify-content: center; */
     background-color: white;
     /* background-color: white; */
     /* border: solid red; */
@@ -14,7 +12,7 @@
 .chart-container {
   position: relative;
   aspect-ratio: 1;
-  width: 50vw;
+  width: 100%;
 }
 
 .test-border {
