--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@ a:hover {
 body {
   margin: 0;
   display: flex;
-  place-items: center;
+  /* place-items: center; */
   min-width: 320px;
   min-height: 100vh;
 }
@@ -38,18 +38,24 @@ h1 {
 }
 
 button {
+  border-color: inherit;
   border-radius: 8px;
+  color: inherit;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: transparent;
   cursor: pointer;
   transition: border-color 0.25s;
 }
-button:hover {
+/* button:hover {
   border-color: #646cff;
+}
+
+*/ button:active {
+  opacity: 50%;
 }
 button:focus,
 button:focus-visible {
