--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,13 @@
 #root {
-  max-width: 1280px;
-  width: 100%;
+  max-width: 1000px;
     /* align-content: center; */
     /* justify-content: center; */
     background-color: white;
     /* background-color: white; */
     /* border: solid red; */
-    margin: 3em;
+    /* padding: 3em; */
+      margin: 0 auto;
+      padding: 2em;
 }
 
 .chart-container {
