--- a/src/index.css
+++ b/src/index.css
@@ -38,11 +38,11 @@ h1 {
 }
 
 button {
-  text-decoration: underline;
+  /* text-decoration: underline; */
   border-color: inherit;
   border-radius: 8px;
   color: inherit;
-  border: 1px solid transparent;
+  border: 1px solid;
   padding: 0.6em 1.2em;
   font-size: 1em;
   font-weight: 500;
